# google-apis-rs-generator

cargo_log_parser/: Cargo.toml
cargo_log_parser/src/lib/: mod.rs
discovery_parser/: Cargo.toml
discovery_parser/examples/: filter_apis.rs
discovery_parser/src/: lib.rs
google_api_auth/: Cargo.toml
google_api_auth/src/: yup_oauth2.rs
google_api_bytes/src/: lib.rs
google_cli_generator/: Cargo.toml  build.rs
google_cli_generator/src/: all.rs  cargo.rs  util.rs
google_cli_generator/src/cli/: liquid_filters.rs  mod.rs  model.rs
google_cli_generator/tests/: generate.rs
google_field_selector/src/: lib.rs
google_field_selector_derive/: Cargo.toml
google_field_selector_derive/src/: lib.rs
google_rest_api_generator/: Cargo.toml
google_rest_api_generator/examples/: any_api.rs
google_rest_api_generator/gen_include/: error.rs  multipart.rs  next_page_token.rs  parsed_string.rs  resumable_upload.rs  stream.rs
google_rest_api_generator/src/: cargo.rs  lib.rs  markdown.rs  method_actions.rs  method_builder.rs  package_doc.rs  resource_builder.rs
mcp/: Cargo.toml
mcp/src/cmds/: cargo_errors.rs  completions.rs  fetch_specs.rs
mcp/src/options/: substitute.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/tests/snapshots/: shared__parse_version__it_works_for_all_known_inputs.snap
templating/: Cargo.toml
templating/src/: liquid.rs  spec.rs  util.rs
tests/mcp/: included-stateless-substitute.sh  journey-tests.sh  utilities.sh
tests/mcp/snapshots/substitute/: fail-data-stdin-template-misses-key
uri_template_parser/: Cargo.toml
uri_template_parser/src/: lib.rs
