[package]
name = "discovery_parser"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[features]
# Don't allow unknown fields in serde parsing. Useful in development to ensure
# no features are being missed accidentally.
strict = []

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
tokio = { version = "1.17", features = ["macros", "rt", "rt-multi-thread"] }
