[package]
name = "google_api_auth"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-yup-oauth2 = ["yup-oauth2", "tokio"]

[dependencies]
yup-oauth2 = { version = "6.6.0", optional = true }
tokio = { version = "1.17", optional = true, features = ["rt", "rt-multi-thread"] }
hyper = "0.14.18"
