[package]
name = "google_cli_generator"
version = "0.1.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
google_rest_api_generator = { path = "../google_rest_api_generator" }
discovery_parser = { path = "../discovery_parser" }
shared = { path = "../shared" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.40"
log = "0.4.8"
liquid = "0.26.0"
liquid-core = "0.26.0"
liquid-derive = "0.26.0"
crossbeam = "0.8.1"

[dev-dependencies]
toml_edit = "0.14.3"
tempfile = "3.1.0"
simple_logger = "2.1.0"

[build-dependencies]
chrono = "0.4.7"
