[package]
name = "google_cli_generator"
version = "0.1.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
google_rest_api_generator = { path = "../google_rest_api_generator" }
discovery_parser = { path = "../discovery_parser" }
shared = { path = "../shared" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1.0.91"
log = "0.4.17"
liquid = "0.26.0"
liquid-core = "0.26.0"
liquid-derive = "0.26.0"
crossbeam = "0.8.2"

[dev-dependencies]
toml_edit = "0.19.1"
tempfile = "3.3.0"
simple_logger = "4.0.0"

[build-dependencies]
chrono = "0.4.23"
