[package]
name = "mcp"
version = "0.1.0"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]
edition = "2018"
description = "A 'master control program' for handling generation of Google APIs"
exclude = ["src/shared/snapshots/"]
publish = false

[[bin]]
name = "mcp"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discovery_parser = { path = "../discovery_parser" }
google_cli_generator = { path = "../google_cli_generator" }
cargo_log_parser = { path = "../cargo_log_parser" }
shared = { path = "../shared" }
templating = { path = "../templating" }
clap = "2.34.0"
failure = "0.1.5"
itertools = "0.10.3"
atty = "0.2.13"
failure-tools = "4.0.2"
structopt = "0.3"
serde_json = "1.0.40"
log = "0.4.8"
simple_logger = "2.1.0"
reqwest = { version = "0.11.10", features = ["blocking"] }
rayon = "1.1.0"
serde = "1.0.99"
ci_info = "0.14.5"
nom = "7.1.1"
