[package]
name = "mcp"
version = "0.1.0"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]
edition = "2018"
description = "A 'master control program' for handling generation of Google APIs"
exclude = ["src/shared/snapshots/"]
publish = false

[[bin]]
name = "mcp"
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discovery_parser = { path = "../discovery_parser" }
google_cli_generator = { path = "../google_cli_generator" }
cargo_log_parser = { path = "../cargo_log_parser" }
shared = { path = "../shared" }
templating = { path = "../templating" }
failure = "0.1.8"
itertools = "0.10.5"
atty = "0.2.14"
failure-tools = "4.0.5"
structopt = "0.3"
serde_json = "1.0.91"
log = "0.4.17"
simple_logger = "4.0.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
rayon = "1.6.1"
serde = "1.0.152"
ci_info = "0.14.9"
nom = "7.1.3"
