[package]
name = "shared"
version = "0.1.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
edition = "2018"
publish = false

[lib]
doctest = false

[dependencies]
serde = { version = "1", features = ["derive"] }
discovery_parser = { path = "../discovery_parser" }
failure = "0.1.8"
log = "0.4.17"
ci_info = "0.14.9"
toolchain_find = "0.2.0"

[dev-dependencies]
itertools = "0.10.5"
insta = "1.26.0"

