[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
name = "templating"
version = "1.0.0"
edition = "2018"
publish = false

description = "Provide a nice interface to a templating engine"
license = "MIT"

[lib]
doctest = false

[dependencies]
failure = "0.1.8"
atty = "0.2.14"
serde_json = "1.0.91"
serde_yaml = "0.9.17"
yaml-rust = "0.4.5"
liquid = "0.26.0"
